refactor: 불필요 메소드 제거, stream메소드 축약